2002-06-09  Christopher Faylor  <cgf@redhat.com>

	* fhandler_disk_file.cc (fhandler_disk_file::fstat_helper): Correctly
	set number of links for directory, if appropriate.

2002-06-10  Robert Collins  <rbtcollins@hotmail.com>

	* thread.cc: Variation of a patch from Thomas Pffaf.
       	(__pthread_detach): Cleanup thread object if the thread has terminated.
	(__pthread_join): Change order of error checks, and lock against
	join/detach/exit races.
	(__pthread_exit): Lock object against join/detach/exit races.
	(pthread::thread_init_wrapper): Ditto.
	(thread_init_wrapper): Rename to pthread::thread_init_wrapper.
	(pthread::create): Check that the mutex initialized correctly.
	(pthread::push_cleanup_handler): Lock against potential cancellation
	race. NB: this may not be required if pthread_cleanup_push is non-
	cancelable.
	* thread.h (pthread::mutex): New member.
	(thread_init_wrapper): Rename to pthread::thread_init_wrapper.
	(pthread::thread_init_wrapper_: New static member.

2002-06-10  Robert Collins  <rbtcollins@hotmail.com>

	* cygwin.din: Add _pthread_cleanup_push and _pthread_cleanup_pop.
	* pthread.cc: Change __pthread_self to pthread::self() thruoghout.
	(_pthread_cleanup_push): New function.
	(_pthread_cleanup_pop): Ditto.
	* thread.cc: Thanks to Thomas Pfaff for the pthread cleanup_push,_pop
	patch, this work is derived from that.
	Change __pthread_self to pthread::self() thruoghout.
	(__pthread_self): Rename to pthread::self.
	(pthread::self): New method.
	(pthread::pthread): Initialize new member.
	(pthread::push_cleanup_handler): New method.
	(pthread::pop_cleanup_handler): New method.
	(pthread::pop_all_cleanup_handlers): New method.
	(__pthread_exit): Pop all cleanup handlers.
	* thread.h (pthread::push_cleanup_handler): Declare.
	(pthread::pop_cleanup_handler): Ditto.
	(pthread::pop_all_cleanup_handlers): Ditto.
	(pthread::self): New static method.
	(__pthread_exit): Give C++ linkage.
	(__pthread_join): Ditto.
	(__pthread_detach): Ditto.